# sdk-python

./: .gitignore  .shipeasy  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/shipeasy-setup/: SKILL.md
.github/workflows/: publish.yml  sync-openapi.yml  tests.yml
admin/: openapi.json
docs/: CLAUDE.md  manifest.json
docs/pages/: admin-api.md  advanced.md  configs.md  configuration.md  error-reporting.md  experiments.md  flags.md  i18n.md  installation.md  killswitches.md  openfeature.md  overview.md  testing.md
docs/skill/: SKILL.md
docs/snippets/i18n/: render.md  setup.md
docs/snippets/metrics/: track.md
docs/snippets/ops/: see.md
docs/snippets/release/: configs.md  experiments.md  flags.md  killswitches.md
examples/guide/: README.md  manage.py  requirements.txt
examples/guide/guideapp/: tests.py  views.py
examples/guide/guideapp/templates/: guide.html
examples/guide/guideproj/: settings.py  urls.py  wsgi.py
scripts/: gen_admin.sh  gen_readme.py
shipeasy/: __init__.py  _anon_id.py  _bootstrap.py  _client.py  _detail.py  _env.py  _eval.py  _hash.py  _internal_report.py  _logging.py  _see.py  _skill.py  _sticky.py  _telemetry.py  _version.py  middleware.py  openfeature.py
shipeasy/admin/: __init__.py  _client.py
shipeasy/django/: __init__.py  apps.py  middleware.py
shipeasy/django/management/commands/: shipeasy_install.py
tests/: conftest.py  test_admin.py  test_bootstrap.py  test_bound_client.py  test_configure_helpers.py  test_django_install.py  test_env_egress.py  test_eval.py  test_eval_vectors.py  test_gate_stack.py  test_hash.py  test_internal_report.py  test_middleware.py  test_no_throw_logging.py  test_openfeature.py  test_parity_features.py  test_see.py  test_server_parity_features.py  test_skill.py  test_telemetry.py  test_test_utilities.py  test_universe_assign.py
