[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipeasy"
version = "0.9.0"
description = "Shipeasy server SDK for Python — feature flags, configs, experiments, metrics."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Shipeasy" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
# OpenFeature provider (`shipeasy.openfeature.ShipeasyProvider`). Optional so the
# base SDK doesn't force the openfeature-sdk dependency on every consumer.
openfeature = ["openfeature-sdk>=0.7"]

[project.urls]
Homepage = "https://shipeasy.dev"
Source = "https://github.com/shipeasy-ai/sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["shipeasy"]
