[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipeasy"
version = "0.12.0"
description = "Shipeasy server SDK for Python — feature flags, configs, experiments, metrics."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Shipeasy" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
# OpenFeature provider (`shipeasy.openfeature.ShipeasyProvider`). Optional so the
# base SDK doesn't force the openfeature-sdk dependency on every consumer.
openfeature = ["openfeature-sdk>=0.7"]
# Django integration (`shipeasy.django` app + `manage.py shipeasy_install`).
# Django apps already depend on Django themselves; this extra is for discovery —
# the base SDK never imports Django (shipeasy.django imports it lazily).
django = ["django>=3.2"]

[project.scripts]
# Explicit, opt-in installer for the bundled agent skill (no install-time hook):
#   shipeasy-skill install   →  .claude/skills/shipeasy-python/SKILL.md
shipeasy-skill = "shipeasy._skill:main"

[project.urls]
Homepage = "https://shipeasy.dev"
Source = "https://github.com/shipeasy-ai/sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["shipeasy"]

# Bundle the agent skill into the wheel so `shipeasy-skill install` can copy it
# without a network call. The source of truth is docs/skill/SKILL.md.
[tool.hatch.build.targets.wheel.force-include]
"docs/skill/SKILL.md" = "shipeasy/_skill_data/SKILL.md"
